# Chappie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp  setup
include/chappie/: boundingbox.h  bowl.h  colorpadruler.h  crosspoints.h  display.h  imagemanip.h  outline.h  square.h  whitepatch.h
src/: boundingbox.cpp  bowl.cpp  colorpadruler.cpp  crosspoints.cpp  display.cpp  imagemanip.cpp  outline.cpp  square.cpp  whitepatch.cpp
tests/: CMakeLists.txt  tests.cpp
